# kubectl-sh-rs

./: .krew.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: krew-plugin-release.yml  publish-to-crates.yml
src/: LICENSE  README.md  engine.rs  entity.rs  main.rs
src/entity/: container.rs  namespace.rs  pod.rs
