[package]
name = "kubectl-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
console = "0.15.0"
#kube = { version = "0.73.0", features = ["runtime", "derive"] }
#k8s-openapi = { version = "0.15.0", features = ["v1_24"] }