[package]
name = "kubectl-sh"
version = "0.1.1"
edition = "2021"
authors = ["Makariy <makariywallet@gmail.com>"]
description =  "Faster way to to access shell of pod's container through interactive selections"
readme = "README.md"
homepage = "https://github.com/ya-makariy/kubectl-sh-rs"
repository = "https://github.com/ya-makariy/kubectl-sh-rs"
license = "MIT"
keywords = ["kubectl", "k8s", "kubernetes", "kube"]
categories= ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
console = "0.15.0"
clap = { version = "3.1.18", features = ["derive"] }
